<resources>
    <string name="app_name">Policheck</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Poop 1</string>
    <string name="drawer_close">Poop 2</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_favorite">Favorite</string>
    <string name="info">Info</string>
    <string name="info_h1">Allmän information</string>
    <string name="info_top_text">Välkommna till appen Policheck \nAppen är tänkt att hjälpa er få en komplett koll på de nyheter från siter (nedan) som berör politik i någon form. Siterna som används nedan är valda för att de är något större och tillhandahåller ett rss flöde som vi kan använder här i appen, det finns ingen vinkling från utvecklarnas sida då det ska vara en öppen syn på allt.</string>
    <string name="info_middle_text">Siterna som för tillfället används är:\nwww.nytimes.com/ (The New York Times)\nwww.bbci.co.uk (BBC UK)\nwww.feedburner.com\n</string>
    <string name="info_bottom_text">Vid buggar eller tips, vänligen kontakta oss via facebook:\nhttps://www.facebook.com/Policheck-413786435729204/\n\n\\\\ Folket från Policheck</string>
    <string name="toast_close_message">Tryck en gång till för att stänga appen</string>
    <string name="toast_close_message2">Tryck en gång till för att stänga appen</string>

</resources>