<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

   <!-- <item
        android:id="@+id/app_info"
        android:enabled="true"
        android:icon="@drawable/icon_two"
        android:title="@string/app_name"
        android:background="@color/colorPrimary"
        />
        -->

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/main_fragment"
            android:enabled="true"
            android:icon="@drawable/ic_rss_feed"
            android:title="@string/menu_feed"
            app:showAsAction="ifRoom"
            />

        <item
            android:id="@+id/favorite_fragment"
            android:enabled="true"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favorite"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/info_fragment"
            android:enabled="true"
            android:icon="@drawable/ic_info"
            android:title="@string/info"
            app:showAsAction="ifRoom" />

    </group>
</menu>